--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
   "author": "lightproject",
   "license": "MIT",
   "dependencies": {
+    "@hiveio/dhive": "^0.14.12",
+    "@hiveio/hive-js": "^0.8.12",
     "chalk": "^2.4.2",
-    "dsteem": "^0.10.1",
     "express": "^4.16.3",
     "ora": "^3.4.0",
-    "request": "^2.88.0",
-    "steem": "^0.7.1"
+    "request": "^2.88.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
