create account fixes

--- a/config-example.json
+++ b/config-example.json
@@ -12,7 +12,7 @@
   "claim_account_enabled": false,
   "claimAccountCountdown": 1,
   "create_account_enabled": false,
-  "create_account_price": "1.000 STEEM",
+  "create_account_price": "1.000 HIVE",
   "backup_mode": false,
   "disabled_mode": false,
   "detailed_logging": false,
@@ -34,7 +34,7 @@
   "min_post_age": 20,
   "max_post_age": 84,
   "allow_comments": false,
-  "currencies_accepted": ["SBD", "STEEM"],
+  "currencies_accepted": ["HBD", "HIVE"],
   "refunds_enabled": true,
   "min_refund_amount": 0.002,
   "no_refund": ["bittrex", "poloniex", "openledger", "blocktrades", "minnowbooster", "ginabot"],
